Parser/test_cases/good/ifoneexpression.cl
class Test {
  foo:Test;
  bar():Int { if x = 3 then true else false fi};
};
