Parser/test_cases/bad/whilenopool.cl
class Test {
  foo:Test;
  bar(x:Int, y:Int):Int {while true loop 5};
};
